# drf-apis-in-a-nutshell

./: README.md  db.sqlite3  pyproject.toml
nutshell/: asgi.py  settings.py  urls.py  wsgi.py
nutshell/api/: admin.py  models.py  serializers.py  urls.py  views.py
nutshell/api/management/commands/: bootstrap_data.py
nutshell/api/migrations/: 0001_initial.py
